# httpplot

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt
httpplot/: __init__.py  backend.py  dataframes.py  example_plots.py  loader.py  plotter.py  plotting.py  server.py
httpplot/resources/: __init__.py  httpgd.html
httpplot/templates/: templates.py
